2009-10-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(newIfxNode): fixed bug 2887512
	  (decorateType, '='): use different error for function pointers
	* src/SDCCglue.c(printIvalFuncPtr): fixed bug 2806238, don't throw away
	  function pointer value just like that
	  (printIval): use different error for function pointers
	* src/SDCCsymt.c(compareFuncType, compareType): new function to compare
	  function pointer types
	  (isConstant): treat literals as constant too to warn before bug 2887512

2009-10-26 Borut Razem <borut.razem AT siol.net>

	* doc/cdbfileformat.lyx, doc/sdccman.lyx, doc/test_suite_spec.lyx:
	  converted to LyX 1.6.4 (\lyxformat 345) format

2009-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkarea.c(lnkarea2): fixed bug 2839083

2009-10-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(decorateType): also set OCLS for PTR_OP, fixed bug 2823963
	* src/SDCCast.h: cosmetic changes
	* src/SDCCicode.c,
	* src/SDCCicode.h: moved setOClass prototype
	* support/regression/tests/bug2823963.c: new, added

2009-10-22 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* device/include/mcs51/p89lpc9321.h, device/include/mcs51/p89lpc9331.h,
	  device/include/mcs51/p89lpc9351.h: added

2009-10-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c(createIvalPtr),
	* src/SDCCglue.c(printIvalFuncPtr): fixed bug 2881971
	* support/regression/tests/zeropad.c: added test

2009-10-18 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: assemblers renamed to sdasxxxx

2009-10-17 Jesus Calvino-Fraga <jesusc AT ece.ubc.ca>

	* src/mcs51/gen.c: Fixed bug 2880909
	* all.dsp, device/lib/make51lib.bat: renamed assemblers to sdasxxxx

2009-10-17 Borut Razem <borut.razem AT siol.net>

	* as/asgb/asgb.dsp, as/asgb/Makefile.in, as/asxxsrc/asexpr.c,
	  as/asxxsrc/asmain.c, as/asxxsrc/asout.c, as/asxxsrc/sdas.c,
	  as/asxxsrc/sdas.h, as/hc08/as_hc08.dsp, as/hc08/Makefile.in,